--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
-Flask==2.3.2
-Flask-SQLAlchemy==3.0.5
-Flask-Migrate==4.0.4
-Flask-Bootstrap4==4.0.2
-Flask-WTF==1.1.1
-Flask-SocketIO==5.3.4
-Flask-Login==0.6.2
-PyMySQL==1.1.0
-Werkzeug==2.3.6
-SQLAlchemy==2.0.19
-WTForms==3.0.1
-email-validator==2.0.0
-Pillow==10.0.0
-python-socketio==5.8.0
+Flask==2.1.0
+Flask-SQLAlchemy==3.0.0
+Flask-Migrate==3.1.0
+Flask-Bootstrap==3.3.7.1
+Flask-WTF==1.0.0
+Flask-SocketIO==5.1.1
+Flask-Login==0.6.0
+Werkzeug==2.2.0
+SQLAlchemy==1.4.0
+celery==5.2.0
+redis==4.0.0
+pymysql==1.0.2
+python-dotenv==0.19.0
+gunicorn==20.1.0
+eventlet==0.30.2
+langchain==0.0.150
+openai==0.27.0
+python-dateutil==2.8.2
+Pillow==9.0.0
+WTForms==3.0.0
+email-validator==1.1.3
+azure-openai==1.0.0
