--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 Flask==2.3.2
-Flask-SQLAlchemy==3.0.5
+Flask-SQLAlchemy==3.0.3
 Flask-Migrate==4.0.4
-Flask-Bootstrap4==4.0.2
-Flask-WTF==1.1.1
-Flask-SocketIO==5.3.4
 Flask-Login==0.6.2
-PyMySQL==1.1.0
+Flask-Bootstrap==3.3.7.1
+Flask-WTF==1.1.1
+Flask-SocketIO==5.3.3
 Werkzeug==2.3.6
-SQLAlchemy==2.0.19
-WTForms==3.0.1
-email-validator==2.0.0
-Pillow==10.0.0
-python-socketio==5.8.0
+SQLAlchemy==2.0.15
+Pillow==9.5.0
+redis==4.5.5
+celery==5.2.7
+langchain
+langchain-community
+pydantic==1.10.8
+python-dotenv==1.0.0
+pymysql==1.0.3
+gunicorn==20.1.0
+eventlet==0.33.3
+openai==0.27.8
