--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,25 @@
-Flask==2.1.0
-Flask-SQLAlchemy==3.0.0
-Flask-Migrate==3.1.0
+Flask==2.3.2
+Flask-SQLAlchemy==3.0.3
+Flask-Migrate==4.0.4
 Flask-Bootstrap==3.3.7.1
-Flask-WTF==1.0.0
-Flask-SocketIO==5.1.1
-Flask-Login==0.6.0
-Werkzeug==2.2.0
-SQLAlchemy==1.4.0
-celery==5.2.0
-redis==4.0.0
-pymysql==1.0.2
-python-dotenv==0.19.0
-gunicorn==20.1.0
-eventlet==0.30.2
-langchain==0.0.150
-openai==0.27.0
+Flask-WTF==1.1.1
+Flask-SocketIO==5.3.4
+Flask-Login==0.6.2
+SQLAlchemy==2.0.19
+celery==5.3.6
+redis==4.6.0
+pymysql==1.1.0
+python-dotenv==1.0.0
+python-socketio==5.8.0
+python-engineio==4.5.1
+gunicorn==21.2.0
+eventlet==0.33.3
+langchain==0.0.268
+openai==0.27.8
 python-dateutil==2.8.2
-Pillow==9.0.0
-WTForms==3.0.0
-email-validator==1.1.3
+Pillow==10.0.0
+WTForms==3.0.1
+Werkzeug==2.3.6
+email-validator==2.0.0
 azure-openai==1.0.0
+pydantic==1.10.8
